# cjseq

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  publish-crate.yml  publish-npm.yml
data/: 1b_w_texture.city.json  3dbag_b2.city.json
examples/: obj_convert.rs  obj_convert_seq.rs
js/: LICENSE  README.md  cjseq.d.ts  cjseq.js  cjseq_bg.wasm.d.ts  package.json
python/: Cargo.toml  README.md  pyproject.toml
python/examples/: cjseq_test_1.py  cjseq_test_2.py
python/src/: lib.rs
src/: cityjson.rs  error.rs  lib.rs  main.rs  wasm.rs
src/conv/: mod.rs  obj.rs  tests.rs
tests/: cj_input.rs  cjf_input.rs
tests/fixtures/: appearance.jsonl
