[package]
name = "cjseq"
version = "0.4.0-beta.0"
description = "Create+process+modify+convert CityJSONSeq "
authors = ["Hugo Ledoux <h.ledoux@tudelft.nl>"]
edition = "2021"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/cityjson/cjseq"
repository = "https://github.com/cityjson/cjseq"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

# Native dependencies (non-wasm)
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }

# WASM dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo-net = { version = "0.5", features = ["http", "json"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["console"] }
getrandom = { version = "0.2", features = ["js"] }
