[package]
name = "cjseq2"
version = "0.1.0"
description = "Temporary fork of CityJSONSeq library"
authors = ["Hidemichi Baba <baba.papa1120.ba@gmail.com>"]
edition = "2021"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/hideba/cjseq"
repository = "https://github.com/hideba/cjseq"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

# Native dependencies (non-wasm)
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }

# WASM dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo-net = { version = "0.5", features = ["http", "json"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["console"] }
getrandom = { version = "0.2.15", features = ["js"] }
