[package]
name = "cjseq"
version = "0.4.0-beta.2"
description = "Create+process+modify+convert CityJSONSeq"
authors = ["Hugo Ledoux <h.ledoux@tudelft.nl>"]
edition = "2021"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/cityjson/cjseq"
repository = "https://github.com/cityjson/cjseq"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# serde_derive = "1.0"

# WASM dependencies
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
serde-wasm-bindgen = "0.6"

[dependencies.web-sys]
version = "0.3"
features = ["console"]

# WASM-specific dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
getrandom = { version = "0.2", features = ["js"] }
